css/nav.css
/* font imports */
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

/* CSS custom properties */

:root {
    --blush-white:  #FDF0F3;
    --blush-pink:#facece;
    --rose-accent:  #E8A0B0;
    --mauve-deep:   #C97B8A;
    --charcoal:     #2D2D2D;
    --card-bg:      #FFFFFF;
    --border-soft:  #F0D6DC;
    --text-muted:   #7A6A6E;
    --border-dark: #a67c84;
    --shadow-pink: rgb(241, 213, 217);
    --box-shadow: rgba(170, 116, 116, 0.5);
}


/* Global rules */
.topnav ul {
    list-style-type: none;
    display: flex;
    justify-content: center;
    padding: 10px;
    width: 90%;
    max-width: 800px;
    margin: 0 auto;
    background-color: rgb(255, 255, 255);
    border: 5px solid #f9ebed;
    border-radius: 50px;
    box-shadow: 0 4px 16px var(--box-shadow);
}

.topnav li {
    margin: 0 35px;
}

.topnav a {
    text-decoration: none;
    color: var(--charcoal);
    font-size: 1.3em;
    font-weight: bold;
    padding: 10px 15px;
    display: block;
}

.topnav a:hover {
    color: #facece;
    background-color: transparent;
    transform: scale(1.3);
    font-weight: bold;
}

.topnav a.active {
    color: #facece;
    transform: scale(1.3);
    font-weight: bold;
}

.topnav .icon {
    margin-left: auto;
    display: none;
}

/* Responsive rules - apply when screen width is less than 1200px */

@media screen and (max-width: 1199px) {
    .topnav a:not(:first-child) {
        display: none;
    }
    
    .topnav a.icon {
        float: right;
        display: block;
    }
    
    .topnav.responsive {
        position: relative;
    }
    
    .topnav.responsive a {
        float: none;
        display: block;
        text-align: left;
    }
    
    .topnav.responsive a.icon {
        position: absolute;
        right: 0;
        top: 0;
    }
}


/* DESKTOP
@media all and (min-width:1200px) {
    .topnav {
        width: 80%;
    }
}

/* TABLET */
/* @media all and (min-width:501px) and (max-width:1199px) {
    .topnav {
        width: 90%;
    }
} */

/* PHONE */
/* @media all and (max-width:500px) {
    .topnav {
        width: 100%;
    }
} */ 

